@@ -1,3 +1,8 @@
+Next release
+============
+
+  * New function bson_strcasecmp, a portable equivalent of strcasecmp.
+
 Libbson-1.6.0
 =============
 
